@@ -1,4 +1,0 @@
-# cannot load environment using RSuite because not global instance (if exists)
-#  is required
-library(roxygen2)
-.libPaths(c('../../../deployment/sbox', '../../../deployment/libs', .libPaths()))
